# dora-control

./: README.md
rocs_robot/: CMakeLists.txt  package.xml
rocs_robot/launch/: dora_configuration.launch  kinect_baselink.launch  kinect_laser.launch  kinect_to_laser_scan.launch  laser_hokuyo.launch  ptu.launch  rosaria.launch  run.launch  runFirst.launch  voxel.launch
rocs_robot/scripts/: ptu.py
rocs_simulation/: CMakeLists.txt  package.xml
rocs_teleop/: CMakeLists.txt  package.xml
rocs_test/: CMakeLists.txt  package.xml
rocs_test/config/move_base_config/: amcl_node.launch  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.launch
rocs_test/launch/: simulation_navigation.launch
rocs_test_mapping/: CMakeLists.txt  package.xml
