<?xml version="1.0"?>
<package>
  <name>rocs_simulation</name>
  <version>0.0.0</version>
  <description>The rocs_simulation package</description>


  <author email="pronobis@cs.washington.edu">Andrzej Pronobis</author>
  <maintainer email="pronobis@cs.washington.edu">Andrzej Pronobis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <run_depend>rocs_teleop</run_depend>

</package>