<?xml version="1.0"?>
<package>
  <name>rocs_test</name>
  <version>0.0.0</version>
  <description>The rocs_test package. Used for launching things and storing configs.</description>

  <author email="pronobis@cs.washington.edu">Andrzej Pronobis</author>
  <maintainer email="pronobis@cs.washington.edu">Andrzej Pronobis</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>rocs_robot</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>