<?xml version="1.0"?>
<package>
  <name>rocs_test_mapping</name>
  <version>0.0.0</version>
  <description>The rocs_test_mapping package</description>

  <author email="pronobis@cs.washington.edu">Andrzej Pronobis</author>
  <maintainer email="pronobis@cs.washington.edu">Andrzej Pronobis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>